Toujours problemes identifiants

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,12 +1,12 @@
-#Fri Apr 13 20:45:01 CEST 2018
+#Tue Apr 17 20:58:42 CEST 2018
 excludes=
 file.reference.jsch-0.1.51.jar=lib/jsch-0.1.51.jar
 javac.deprecation=false
 file.reference.jcommon-1.0.0.jar=lib/jcommon-1.0.0.jar
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=true
 run.classpath=${javac.classpath}\:${build.classes.dir}
 javadoc.nonavbar=false
-javac.external.vm=true
 run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 javac.processorpath=${javac.classpath}
@@ -43,11 +43,7 @@ debug.classpath=${run.classpath}
 file.reference.junit.jar=lib/junit.jar
 run.jvmargs=
 file.reference.servlet.jar=lib/servlet.jar
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 build.generated.dir=${build.dir}/generated
 jar.compress=false
 javadoc.private=false
